--- a/Practica 27 - Neopixel/Readme
+++ b/Practica 27 - Neopixel/Readme
@@ -1,1 +1,4 @@
-Configura una tira neopixel con la Raspberry Pi Pico
+Este programa configura una tira Neopixel de 8 leds con la Raspberry Pi Pico, necesitas guardar el archivo "neopixel.py" dentro de la memoria de la Pi Picopara funcionar.
+
+Para declarar la libreria dentro de tu programa utiliza el siguiente comando:
+* from neopixel import Neopixel
