--- a/Practica 01 - Hello World/Readme
+++ b/Practica 01 - Hello World/Readme
@@ -1,3 +1,2 @@
 Compila la instrucción dentro del editor y la  consola de Thonny
-<a href="https://github.com/UNIT-Electronics/UNIT-Pico-Starter-kit/blob/master/Practica%2001%20-%20Hello%20World/Hello%20World.jpg"><img src="Hello World.jpg?raw=false" width="800px"><br/>
-Referencia IDE Thonny</a>
+<a href="https://github.com/UNIT-Electronics/UNIT-Pico-Starter-kit/blob/master/Practica%2001%20-%20Hello%20World/Hello%20World.jpg"><img src="Hello World.jpg?raw=false" width="800px"><br/>Referencia IDE Thonny</a>
